--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "start": "http-server dist/"
     
   },
   "dependencies": {
