--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview",
     "gulp": "gulp",
     "start": "http-server dist/"
-    
   },
   "dependencies": {
+    "gulp": "^5.0.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
